# Fashion_Dress_Mart

./: README.md  alembic.ini  pyproject.toml  run.py
app/: database.py  dependencies.py  main.py
app/core/: __init__.py  auth.py  security.py
app/models/: __init__.py  cart.py  category.py  order.py  payment.py  product.py  review.py  user.py  wishlist.py
app/repository/: cart_repo.py  order_repo.py  product_repo.py  user_repo.py
app/routers/: __init__.py  admin.py  auth.py  cart.py  categories.py  orders.py  payments.py  products.py  reviews.py  users.py  wishlist.py
app/schemas/: cart.py  order.py  payment.py  product.py  review.py  user.py  wishlist.py
app/services/: auth_service.py  email_service.py  order_service.py  payment_service.py  product_service.py
app/utils/: __init__.py  email.py  image_upload.py
backend/: .gitignore  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: auth.py  hashing.py  security.py
backend/app/models/: __init__.py  cart.py  category.py  order.py  payment.py  product.py  review.py  user.py  wishlist.py
backend/app/repository/: __init__.py  cart_repo.py  order_repo.py  product_repo.py  user_repo.py
backend/app/routers/: __init__.py  admin.py  auth.py  cart.py  categories.py  orders.py  payments.py  products.py  reviews.py  users.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_orders.py  test_products.py
frontend/: package.json
frontend/db/: custom.db
frontend/prisma/: schema.prisma  seed.ts
migrations/: README.md
tests/: conftest.py
(+80 files in other folders)
