[project]
name = "fashion-dress-mart-backend"
version = "0.1.0"
description = "FastAPI backend for the Fashion Dress Mart e-commerce platform"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends/Query)
